@@ -246,6 +246,7 @@ Fixed bugs
 - avoid copying of unbounded solutions from sub-SCIPs as those cannot be checked completely
 - corrected the output of the first LP value in case of branch-and-price
 - fixed possible integer overflow, which led to wrong conclusion of infeasibility, in energetic reasoning of cons_cumulative.c
+- handle special case of variable bound constraints during aggregating variables
 
 Miscellaneous
 -------------
